src/test/ui/closure-array-break-length.stderr
error[E0268]: `continue` outside of loop
  --> $DIR/closure-array-break-length.rs:12:13
   |
LL |     |_: [_; continue]| {}; //~ ERROR: `continue` outside of loop
   |             ^^^^^^^^ cannot break outside of a loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0268`.
